# OpenSeeFace-OpenVINO

./: .gitignore  README.md  convert_models.py  facetracker.py  input_reader.py  make_exe_openvino.bat  make_exe_openvino.sh  ovtracker.py  pyproject.toml  retinaface.py  tracker.py
cam_utils/: input_reader.py
ov-models/: lm_model0_opt.xml  lm_model1_opt.xml  lm_model2_opt.xml  lm_model3_opt.xml  lm_model4_opt.xml  lm_modelT_opt.xml  lm_modelU_opt.xml  lm_modelV_opt.xml  mnv3_gaze32_split_opt.xml  retinaface_640x640_opt.xml
ov_backend/: infer_utils.py  math_utils.py  tracker.py  utils.py
ov_models/headmap-detector-mobilenet-v3/: headmap-detector-mobilenet-v3.xml
ov_models/landmark-mobilenet-v3/: landmark-mobilenet-v3.xml
ovbackend/: __init__.py  infer_utils.py  math_utils.py  processor.py  retinaface.py  tracker.py  utils.py
scripts/: make_exe_openvino.bat  make_exe_openvino.sh
