[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openseeface"
version = "1.20.4"
description = "OpenVINO-based facial landmark detection and head pose estimation"
authors = [{name = "emilianavt"}]
license = {text = "BSD-2-Clause"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "openvino>=2024.5.0",
    "psutil>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/emilianavt/OpenSeeFace"

[tool.setuptools.packages.find]
include = ["ovbackend*"]
exclude = ["escapi*", "Licenses*", "dshowcapture*"]
